@@ -164,6 +164,8 @@ an environment variable rather than appending to it, so keeping the two apart le
 garbage collector and heap sizing (`ARCADEDB_OPTS_GC` and `ARCADEDB_OPTS_MEMORY`) intact. The heap is
 sized as a percentage of the container memory limit, so `docker run -m 512m` and a multi-GB
 production container both work without further tuning.
+On Java 25 and later `server.sh` also enables compact object headers (`-XX:+UseCompactObjectHeaders`), after
+checking that the JVM accepts the flag; set `ARCADEDB_OPTS_HEADERS` to override it, or to an empty value to opt out.
 
 Now open your browser on http://localhost:2480 and play with [ArcadeDB Studio](https://docs.arcadedb.com/#studio) and the
 imported `OpenBeer` database to find your favorite beer.
